Bug 1147279 - Get correct translation when layer optimize away. r=roc, a=bajaj